实现了心情更新功能： 在MoodService类中添加了updateMood方法，允许用户更新自己发布的心情内容和属性 该方法包含权限验证，确保只有心情的原作者才能更新自己的心情 方法接收心情ID、更新请求对象和当前用户名作为参数 更新功能的具体实现： 通过ID查找目标心情，若不存在则抛出404错误 验证当前用户是否存在 进行权限验证，确保当前用户是心情的所有者，否则返回403错误 更新心情的所有相关字段，包括： 内容(content) 表情(emoji) 标签(tags) 隐私级别(privacyLevel) 位置信息(location, latitude, longitude) 心情类型(moodType) 天气信息(weather) 保存更新后的心情到数据库 返回更新后的心情响应对象 控制器层集成： 确认MoodController中已存在对应的PUT端点(/api/moods/{id}) 该端点接收心情ID、更新请求和用户认证信息 调用服务层方法并返回适当的HTTP响应